--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,8 @@ go.work
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -75,6 +76,7 @@ Temporary Items
 # Ignore all local history of files
 .history
 .ionide
+.jpeg
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,go
 
